[package]
name = "tomato_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.18"
volatile = "0.2.3"
spin = "0.9.4"
xbuild = "0.1.1"
bootimage = "0.10.3"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
